# retrieval-augmented-generation

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
aieng-rag-utils/: pyproject.toml
aieng-rag-utils/aieng/rag/utils/: __init__.py  pubmed.py
implementations/cloud_search/: README.md  s3_search_llamaindex.ipynb
implementations/document_search/: README.md  document_search_langchain.ipynb  document_search_langchain_cohere.ipynb  document_search_llamaindex.ipynb  document_search_llamaindex_cohere.ipynb
implementations/pubmed_qa/: README.md  pubmed_qa_llamaindex.ipynb
implementations/rag_evaluation/: README.md  rag_evaluation_basic.ipynb  rag_evaluation_testset_generation.ipynb
implementations/sql_search/: README.md  sql_search_langchain.ipynb
implementations/web_search/: README.md  web_search_langchain.ipynb  web_search_llamaindex.ipynb
scripts/: setup.sh
web_search/: README.md
