[project]
name = "rag-bootcamp"
version = "0.1.0"
requires-python = ">=3.10"
description = ""
authors = [
  { name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai" },
]
readme = "README.md"
dependencies = [
  "aieng-rag-utils",
  "beautifulsoup4==4.12.3",
  "cohere>=5.11.4",
  "datasets>=3.5.0",
  "faiss-cpu==1.11.0",
  "googlesearch-python>=1.3.0",
  "langchain>=0.3.7",
  "langchain-cohere>=0.4.4",
  "langchain-community>=0.3.21",
  "langchain-experimental>=0.3.4",
  "langchain-huggingface>=0.2.0",
  "langchain-openai>=0.3.8",
  "llama-hub==0.0.65; sys_platform == 'linux'",
  "llama-hub==0.0.45; sys_platform == 'darwin'",
  "llama-index>=0.12.37",
  "llama-index-core>=0.12.37",
  "llama-index-embeddings-huggingface>=0.2.3",
  "llama-index-embeddings-openai>=0.1.11",
  "llama-index-llms-cohere>=0.1.7",
  "llama-index-llms-huggingface>=0.5.0",
  "llama-index-llms-openai-like>=0.1.3",
  "llama-index-readers-json>=0.3.0",
  "llama-index-readers-s3>=0.4.0",
  "llama-index-retrievers-bm25>=0.5.2",
  "llama-index-vector-stores-faiss>=0.1.2",
  "llama-index-vector-stores-weaviate>=1.3.1",
  "nltk==3.9.1",
  "networkx==3.2.1",
  "numpy==1.26.4",
  "openai==1.60.0",
  "pandas==2.2.1",
  "pypdf>=5.5.0",
  "ragas>=0.2.15",
  "rapidfuzz>=3.13.0",
  "requests==2.32.3",
  "safetensors>=0.4.2",
  "sentence-transformers==3.3.1",
  "tiktoken>=0.7.0,<0.8.0",
  "tokenizers>=0.20",
  "torch==2.1.2",
  "torchvision>=0.15.2",
  "transformers==4.46.3",
  "weaviate-client==4.9.3",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "ipython>=8.36.0",
  "ipywidgets>=8.1.7",
  "jupyter>=1.1.1",
  "jupyterlab>=4.4.2",
]
gpu = [
  "faiss-gpu>=1.7.2",
  "nvidia-cublas-cu11==11.10.3.66",
  "nvidia-cublas-cu12==12.1.3.1",
  "nvidia-cuda-cupti-cu11==11.7.101",
  "nvidia-cuda-cupti-cu12==12.1.105",
  "nvidia-cuda-nvrtc-cu11==11.7.99",
  "nvidia-cuda-nvrtc-cu12==12.1.105",
  "nvidia-cuda-runtime-cu11==11.7.99",
  "nvidia-cuda-runtime-cu12==12.1.105",
  "nvidia-cudnn-cu11==8.5.0.96",
  "nvidia-cufft-cu11==10.9.0.58",
  "nvidia-cufft-cu12==11.0.2.54",
  "nvidia-curand-cu11==10.2.10.91",
  "nvidia-curand-cu12==10.3.2.106",
  "nvidia-cusolver-cu11==11.4.0.1",
  "nvidia-cusolver-cu12==11.4.5.107",
  "nvidia-cusparse-cu11==11.7.4.91",
  "nvidia-cusparse-cu12==12.1.0.106",
  "nvidia-ml-py==12.535.133",
  "nvidia-nccl-cu11==2.14.3",
  "nvidia-nvtx-cu11==11.7.91",
  "nvidia-nvtx-cu12==12.1.105",
  "nvidia-nvjitlink-cu12==12.4.99",
  "nvidia-cudnn-cu12==8.9.2.26",
  "nvidia-nccl-cu12==2.18.1",
  "triton==2.1.0",
  "vllm==0.3.0",
  "xformers==0.0.23.post1",
]


[tool.uv.workspace]
members = [
  "aieng-rag-utils",
]

[tool.uv.sources]
aieng-rag-utils = { workspace = true }
