[project]
name = "rag-bootcamp"
version = "0.1.0"
requires-python = ">=3.10"
description = ""
authors = [
  { name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai" },
]
readme = "README.md"
dependencies = [
  "aieng-rag-utils",
  "cohere>=5.11.4",
  "datasets>=3.5.0",
  "faiss-cpu==1.11.0",
  "langchain>=0.3.7",
  "langchain-cohere>=0.4.4",
  "langchain-community>=0.3.21",
  "langchain-experimental>=0.3.4",
  "langchain-huggingface>=0.2.0",
  "langchain-openai>=0.3.8",
  "llama-hub==0.0.65; sys_platform == 'linux'",
  "llama-hub==0.0.45; sys_platform == 'darwin'",
  "llama-index>=0.12.37",
  "llama-index-core>=0.12.37",
  "llama-index-embeddings-huggingface>=0.2.3",
  "llama-index-embeddings-openai>=0.1.11",
  "llama-index-llms-cohere>=0.1.7",
  "llama-index-llms-huggingface>=0.5.0",
  "llama-index-llms-openai-like>=0.1.3",
  "llama-index-vector-stores-faiss>=0.1.2",
  "llama-index-vector-stores-weaviate>=1.3.1",
  "nltk==3.9.1",
  "networkx==3.2.1",
  "numpy==1.26.4",
  "openai==1.60.0",
  "pandas==2.2.1",
  "pypdf>=5.5.0",
  "ragas>=0.2.15",
  "requests==2.32.4",
  "safetensors>=0.4.2",
  "sentence-transformers==3.3.1",
  "tiktoken>=0.7.0,<0.8.0",
  "tokenizers>=0.20",
  "torch==2.1.2",
  "torchvision>=0.15.2",
  "transformers==4.53.0",
  "weaviate-client==4.9.3",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "ipython>=8.36.0",
  "ipywidgets>=8.1.7",
  "jupyter>=1.1.1",
  "jupyterlab>=4.4.2",
  "kaggle>=1.7.4.5",
  "codecov>=2.1.13",
  "mypy>=1.14.1",
  "nbqa>=1.9.1",
  "pip-audit>=2.7.3",
  "pre-commit>=4.1.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.2",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.9.2",
]

[tool.uv.workspace]
members = [
  "aieng-rag-utils",
]

[tool.uv.sources]
aieng-rag-utils = { workspace = true }
