[project]
name = "aieng-rag-utils"
version = "0.1.0"
description = "Helper modules for AI Engineering RAG Bootcamp reference implementations"
authors = [{name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = []


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["aieng/"]

[tool.hatch.build.targets.wheel]
include = ["aieng/"]



